# MAS418_project

./: README.md  YT Scope Project.svdx
MAS418_project/: MAS418_project.sln
MAS418_project/MAS418_project/: MAS418_project.tsproj
MAS418_project/MAS418_project/MAS418/: ControlBox.plcproj  GlobalTextList.TcGTLO  GlobalTextList_1.TcGTLO  MAS418.plcproj  PlcTask.TcTTO  PlcTask_1.TcTTO  Visualization Manager.TcVMO
MAS418_project/MAS418_project/OL_VC_measurement/: OL_VC_measurement.sln
MAS418_project/OL_VC/: OL_VC.tcmproj  YT Scope Project.tcscopex
MAS418_project/OL_VC/VSSettings/: .vsm
MAS418_project/Simulink/: CL_PC.slx  OL_VC.slx  OL_VC.slx.autosave
MAS418_project/Simulink/plcsrc/: CL_PC.exp  MotionReferenceGeneratorCrane.exp
O3/ADS test (TwinCAT and ROS2)/: O3.sln
O3/ROS2/: ros2cmds.txt
O3/ROS2/ros2-examples-ads/urdf_tutorial/: CMakeLists.txt
O3/ROS2/ros2-examples-ads/urdf_tutorial/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
O3/ROS2/ros2-examples-ads/urdf_tutorial/install/urdf_tutorial/share/ament_index/resource_index/parent_prefix_path/: urdf_tutorial
O3/ROS2/ros2-examples-ads/urdf_tutorial/install/urdf_tutorial/share/urdf_tutorial/: package.sh
O3/ROS2/ros2-examples-ads/urdf_tutorial/install/urdf_tutorial/share/urdf_tutorial/launch/: display.launch.py
O3/ROS2/ros2-examples-ads/urdf_tutorial/install/urdf_tutorial/share/urdf_tutorial/rviz/: urdf.rviz
O3/ROS2/ros2-examples-ads/urdf_tutorial/scripts/: crane_controller.py
O3/ROS2/ros2-examples-ads/urdf_tutorial/urdf/: green_crane.urdf  simple_green_crane.urdf
(+172 files in other folders)
